2003-03-18  Roland McGrath  <roland@redhat.com>

	* Versions (libpthread: GLIBC_2.2): Remove
	pthread_barrierattr_getpshared, never really existed.
	(libpthread: GLIBC_2.0): Move __pthread_initialize to ...
	(libpthread: GLIBC_PRIVATE): ... here.

2003-03-14  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/sparc64/Makefile: New file.
	* sysdeps/unix/sysv/linux/sparc/Makefile ($(objpfx)specs): Use full
	path for crt[in].o.

2003-03-14  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/mips/pspinlock.c (__pthread_spin_lock): Don't .set
	mips2 on new abi.
	* sysdeps/mips/pt-machine.h (__compare_and_swap): Likewise.
	Handle 64-bit longs on n64.

2003-03-07  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/ia64/pspinlock.c (__pthread_spin_lock,
	__pthread_spin_trylock): Rewritten.

2003-03-06  Ulrich Drepper  <drepper@redhat.com>

	* tst-cancel4.c (tf_sleep): Lower sleep time a bit to not upset
	recent kernels.

2003-03-02  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/timer_create.c (timer_create): Return correct
	error for CPU clocks.

	* sysdeps/unix/sysv/linux/bits/posix_opt.h: Define
	_POSIX_MONOTONIC_CLOCK.
	* sysdeps/unix/sysv/linux/i386/bits/posix_opt.h: Likewise.

2003-03-01  Roland McGrath  <roland@redhat.com>

	* sysdeps/powerpc/powerpc64/pt-machine.h
	(THREAD_GETMEM, THREAD_GETMEM_NC, THREAD_SETMEM, THREAD_SETMEM_NC):
	New macros.
	* sysdeps/powerpc/tls.h: Don't define those here.

	* sysdeps/powerpc/tls.h [! USE_TLS && !__powerpc64__]: Define
	tcbhead_t with multiple_threads member.
	[USE_TLS] (tcbhead_t): Define minimal one-word version.
	[USE_TLS && !__powerpc64__] (TLS_MULTIPLE_THREADS_IN_TCB): Define.
	* sysdeps/powerpc/tcb-offsets.sym [USE_TLS]: Use tls.h macros to
	derive thread register offset of p_multiple_threads member.

	* descr.h (struct _pthread_descr_struct) [!USE_TLS || !TLS_DTV_AT_TP]:
	Conditionalize p_header member on this.
	[TLS_MULTIPLE_THREADS_IN_TCB]: Add p_multiple_threads alternatively.